# customSDRangel

./: CMakeLists.txt  CMakePresets.json
devices/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/channelrx/: CMakeLists.txt
plugins/channelrx/demodatv/: atvdemod.h  atvdemodbaseband.h  atvdemodgui.cpp  atvdemodgui.h  atvdemodgui.ui  atvdemodsettings.cpp  atvdemodsettings.h  atvdemodsink.cpp  atvdemodsink.h
plugins/channelrx/filesink/: filesinkgui.cpp
plugins/channeltx/filesource/: filesourcegui.cpp  filesourcegui.ui  filesourcesettings.cpp
plugins/samplesink/: CMakeLists.txt
plugins/samplesource/: CMakeLists.txt
plugins/samplesource/fileinput/: fileinputgui.cpp  fileinputgui.ui
plugins/samplesource/hackrfinput/: hackrfinput.cpp  hackrfinput.h  hackrfinputgui.cpp  hackrfinputgui.h  hackrfinputgui.ui  hackrfinputsettings.cpp
sdrbase/device/: deviceapi.cpp  deviceapi.h
sdrbase/dsp/: nco.h  ncof.h
sdrgui/: mainwindow.cpp
sdrgui/channel/: channelgui.cpp
sdrgui/device/: devicegui.cpp  deviceuiset.cpp
sdrgui/gui/: channeladddialog.cpp  channeladddialog.h  glspectrumgui.cpp  samplingdevicedialog.cpp  tvscreenanalog.cpp  tvscreenanalog.h  workspace.cpp
sdrgui/mainspectrum/: mainspectrumgui.cpp
sdrsrv/: mainserver.cpp
settings/: frequency.txt
